Removed scrollbar, fixed images, added telegram urls

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@
 html {
   background: #363636;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
